# daisy2-chat

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .python-version  CLAUDE.md  Dockerfile  MIGRATION-CHECKLIST.md  MIGRATION.md  README.md  docker-compose.health.yml  docker-compose.override.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  start-server.sh  start-simple.sh  start.sh  tailwind.config.js  update-and-restart.sh  voice_to_claude_code_fast.py
.github/workflows/: pr.yml  test.yml
config/tool_allowlists/: coding.yml  full.yml  safe.yml
data/conversations/: .gitkeep
data/sandbox/: .gitkeep
docs/: ARCHITECTURE.md  CLAUDE.md  GOOGLE_WORKSPACE_MCP_SETUP.md  TESTING.md  stt-optimization-plan.md
new-fronend/: .eleventy.js  ARCHITECTURE.md  index.html  package-lock.json  package.json  tailwind.config.js
new-fronend/_site/_site/css/: output.css
new-fronend/js/: demo.js
new-fronend/src/: index.html
new-fronend/src/_includes/: layout.njk
new-fronend/src/_includes/components/: chat-message.njk  control-button.njk  settings-field.njk  tool-display.njk
new-fronend/src/css/: input.css
porcupine-test-working/: index.html
sandbox/: .gitignore  README.md  claude.md
scripts/: check_health.sh  health_check.py  run_tests.py
src/api/: __init__.py  download_manager.py  git_operations.py  models.py  notification_manager.py  server.py  session_manager.py  tts_service.py  websocket_handler.py  whisper_service.py
src/mcp/: base.py
src/mcp/drive_schedule_mcp/: server.py
src/mcp/file_downloads/: README.md  __init__.py  config.json  mcp_server_standalone.py  server.py
src/mcp/trading_agent/: client.py  config.json  server.py
src/mcp/weather_mcp/: README.md  __init__.py  pyproject.toml  server.py
src/voice_assistant/: assistant.py  config.py  config_loader.py  main.py
src/voice_assistant/audio/: sounds.py  stt.py  tts.py  wake_word.py
src/voice_assistant/claude/: client.py  conversation.py
src/voice_assistant/ui/: console.py
tests/e2e/: parallel_stt.spec.js
tests/frontend/: setup.js  test_audio_recording.test.js  test_hey_daisy_wake_word.test.js
tests/integration/: test_mcp_server.py  test_parallel_stt.py  test_persistent_claude.py  test_trading_agent.py
tests/performance/: test_stt_performance.py
tests/unit/: test_session_manager.py  test_whisper_service.py
tests/utils/: stt_test_helpers.py
web/: index.html
web-backup/js/: app.js  state-themes.js
web-backup/static/js/: wake-word.js
web/css/: output.css
web/js/: app.js  audio.js  components.js  demo.js  main.js  state-themes.js  ui-components.js  wake-word.js  websocket.js
web/src/: input.css
web/static/: openwakeword-test.html  openwakeword-working.html
web/static/css/: health-monitor.css  notification-area.css  output.css  state-themes.css  styles.css
web/static/js/: app.js  audio.js  constants.js  health-monitor.js  keyword-detector.js  notification-area.js  state-themes.js  ui-components.js  vad-service.js  wake-word.js  websocket.js
web/static/porcupine-test-working/: index.html  package-lock.json  package.json
workspace/: .mcp-config.json.example  .mcp.json
workspace/.daisy/: README.md  docker-compose.override.yml.example  get-driving-schedule.py  list-mounted-files.py  notifications.yml.example  readme.md  sync-mounts.sh
