[project]
name = "daisy2"
version = "0.2.0"
description = "Voice-enabled Claude Code assistant with programmable automation"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Myra", email = "myra@example.com" }
]

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "anthropic>=0.40.0",
    "psutil>=5.9.0",
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "requests>=2.31.0",
    # MCP
    "mcp>=1.0.0",
    # TTS
    "piper-tts>=1.2.0",
    "onnxruntime>=1.16.0",
    # Real-time Speech Recognition
    "faster-whisper>=0.10.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
all = [
    "daisy2[mcp,dev]",
]

[project.scripts]
daisy2-server = "api.server:main"
daisy2 = "api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_assistant", "src/mcp"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
