[project]
name = "weather-mcp-server"
version = "1.0.0"
description = "MCP server for weather data from NOAA API with St. Louis, MO as default location"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
weather-mcp-server = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
